<resources>
    <string name="app_name">Driving_School_Management</string>
    <string name="password">Password</string>
    <string name="id">I.D</string>
    <string name="new_user">New User?</string>
    <string name="forgot_password">Forgot Pasword?</string>
    <string name="first_name">First name</string>
    <string name="Last_name">Last name</string>
    <string name="Phone_number">Phone number</string>
    <string name="Region">Region</string>
    <string name="Confirm_password">confirm password</string>
    <string name="Register">Register</string>
    <string name="login">Login</string>
</resources>
