<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/idEditText"
        android:layout_width="236dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="227dp"
        android:layout_height="37dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/idEditText"
        app:layout_constraintStart_toStartOf="@+id/idEditText"
        app:layout_constraintTop_toBottomOf="@+id/idEditText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="114dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:text="@string/new_user"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        tools:layout_editor_absoluteX="210dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="@+id/textView"
        tools:layout_editor_absoluteY="255dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        tools:layout_editor_absoluteX="237dp"
        tools:layout_editor_absoluteY="299dp" />
</androidx.constraintlayout.widget.ConstraintLayout>